use lambdas to implement Searchable.getSearchableFields